replacing sliders on blocks

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1016,9 +1016,10 @@ body {
     }
     .block_row {
         display: flex;
-        justify-content: space-between;
-        gap: 15px;
+        
+        gap: 10px;
         margin-bottom: 32px;
+        flex-wrap: wrap;
         .block_item {
             // min-width: 23%;
             line-height: 25px;
@@ -1026,8 +1027,9 @@ body {
             background: #E5F2F4;
             box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
-            min-width: 289px;
+            max-width: 289px;
             min-height: 108px;
+            padding: 0 60px;
             a {
                 color: $black;
             }
@@ -1725,11 +1727,12 @@ body {
         justify-content: space-between;
         align-items: center;
         margin-bottom: 32px;
+        flex-wrap: wrap;
         .vacancies_contact_item {
             background: $white;
             box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
-            min-width: 360px;
+            max-width: 360px;
             min-height: 106px;
             display: block;
             line-height: 25px;
@@ -2070,6 +2073,7 @@ body {
             border-radius: 10px;
             width: 380px;
             min-height: 106px;
+            padding: 0 20px;
             a {
                 color: $black;
             }
@@ -2090,6 +2094,7 @@ body {
             border-radius: 10px;
             width: 380px;
             min-height: 106px;
+            padding: 0 20px;
             a {
                 color: $black;
             }
