--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1206,11 +1206,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  gap: 15px;
+  gap: 10px;
   margin-bottom: 32px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .about_container .block_row .block_item {
   line-height: 25px;
@@ -1221,8 +1220,9 @@ body {
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  min-width: 289px;
+  max-width: 289px;
   min-height: 108px;
+  padding: 0 60px;
 }
 .about_container .block_row .block_item a {
   color: #000000;
@@ -2007,13 +2007,15 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 32px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .vacancies_container .vacancies_contact .vacancies_contact_item {
   background: #ffffff;
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  min-width: 360px;
+  max-width: 360px;
   min-height: 106px;
   display: block;
   line-height: 25px;
@@ -2326,6 +2328,7 @@ body {
   border-radius: 10px;
   width: 380px;
   min-height: 106px;
+  padding: 0 20px;
 }
 .page_information_container .insurance_organizations_block .block_item a {
   color: #000000;
@@ -2350,6 +2353,7 @@ body {
   border-radius: 10px;
   width: 380px;
   min-height: 106px;
+  padding: 0 20px;
 }
 .page_information_container .tabs_block .block_item a {
   color: #000000;
