--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2181,10 +2181,290 @@ body {
             justify-content: center;
             line-height: 25px;
             a {
-                // padding-left: 15px;
+                padding-left: 15px;
                 color: $black;
             }
         }
+    }
+}
+
+// _________________________________________ ОТДЕЛЕНИЯ________________________________________________________
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+// * {
+//     box-sizing: border-box;
+//     margin: 0;
+//     padding: 0;
+// }
+
+.search {
+    display: flex;
+    justify-content: center;
+}
+
+.cards {
+    margin-top: 32px;
+    margin-bottom: 32px;
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+}
+
+.title-depart {
+    font-weight: 700;
+    display: flex;
+    font-family: "Open Sans";
+    margin-bottom: 28px;
+    color: rgb(1, 50, 54);
+    margin-top: 28px;
+    h1 {
+        font-size: 60px;
+    }
+    h2 {
+        font-size: 35px;
+    }
+}
+
+.title-stacionar {
+    font-weight: 700;
+    display: flex;
+    font-family: "Open Sans";
+    margin-bottom: 20px;
+    color: rgb(1, 50, 54);
+    margin-top: 32px;
+    h2 {
+        font-size: 35px;
+    }
+}
+
+.title-otherdepart {
+    color: $black;
+    font-weight: 700;
+    display: flex;
+    font-family: "Open Sans";
+    margin-bottom: 20px;
+    h2 {
+        font-size: 35px;
+    }
+}
+
+.stacionar-depart {
+    font-family: "Open Sans";
+}
+
+.adress {
+    font-size: 18px;
+    line-height: 22px;
+    span {
+        font-weight: 700;
+    }
+}
+
+.for-margin {
+    margin-top: 32px;
+}
+
+
+.for-margin {
+    p {
+        font-size: 18px;
+        line-height: 22px;
+    }
+}
+
+.block-info {
+    font-size: 18px;
+    line-height: 22px;
+    p {
+        margin-top: 32px;
+        font-weight: 600;
+    }
+}
+
+// p {
+//     font-family: "Open Sans";
+// }
+.search {
+    width: 100%;
+    height: 71px;
+    display: flex;
+    align-items: center;
+    border: 2px solid #45A6AF;
+    border-radius: 50px;
+    justify-content: center;
+}
+
+.search-button {
+    height: 100%;
+    border: none;
+    outline: none;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    background-color: white;
+    padding-top: 17px;
+    padding-bottom: 18px;
+}
+
+.search-icon {
+    width: 36px;
+    height: 36px;
+    margin-left: -32px;
+    margin-right: 11px;
+}
+
+.search-input {
+    width: 90%;
+    height: 100%;
+    border: none;
+    outline: none;
+    // padding-right: 20px;
+    font-size: 20px;
+    padding-bottom: 22px;
+    padding-top: 22px;
+}
+
+.header-card {
+    width: 1067px;
+    margin-top: 30px;
+    display: flex;
+    border: 1px solid #BBDFE3;
+    border-radius: 10px;
+    padding: 30px;
+}
+
+.card-text {
+    margin-left: 30px;
+}
+
+.card-text h3 {
+    font-size: 25px;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.2;
+    margin-bottom: 14px;
+}
+
+.card-text p {
+    margin-top: 7px;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    display: flex;
+    align-items: center;
+}
+
+.card-text span {
+    color: #45A6AF;
+}
+
+.cards-for-text {
+    margin-right: 35px;
+    padding: 10px;
+    margin-top: 15px;
+    width: 516px;
+    height: 147px;
+    border: 1px solid #BBDFE3;
+    border-radius: 10px;
+    font-family: "Open Sans";
+    padding-left: 15px;
+}
+
+// .cards-for-text span {
+//     color: #45A6AF;
+// }
+.cards-for-text h3 {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 5px;
+    margin-bottom: 7px;
+}
+
+.cards-for-text {
+    p {
+        font-size: 12px;
+        font-weight: 450;
+        margin-top: 15px;
+        line-height: 1.5;
+    }
+    .job-title {
+        color: #45A6AF;
+        font-size: 12px;
+    }
+    .acreditation-title {
+        line-height: 2;
+        font-size: 12px;
+    }
+}
+
+.display-flex {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 28px;
+}
+
+.info {
+    font-family: "Open Sans";
+    margin-top: 30px;
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.info span {
+    font-weight: bold;
+}
+
+.info-style {
+    margin-top: 28px;
+    .info-text {
+        margin-bottom: 5px;
+    }
+    li {
+        margin-left: 15px;
+    }
+}
+
+.info-style b {
+    font-family: "Open Sans";
+}
+
+.card-text-img {
+    margin: 6px;
+    width: 288px;
+    height: 192px;
+    box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+
+.card-text-img {
+    // margin-bottom: 14px;
+    // margin-right: 14px;
+    img {
+        max-width: 100%;
+        position: absolute;
+        border-radius: 5px;
+    }
+}
+
+.card-text-img .second-paragrap {
+    margin-top: 33% !important;
+}
+
+.card-text-img p {
+    padding-left: 14px;
+    font-weight: 600;
+    font-size: 18px;
+    font-family: "Open Sans";
+    position: relative;
+    margin-top: 122px;
+}
+
+.depart-travmpunkt {
+    .cards {
+        margin-top: 28px;
+        margin-bottom: 28px;
+        justify-content: flex-start;
     }
 }
 
