--- a/static/libs/slick/slick-theme.css
+++ b/static/libs/slick/slick-theme.css
@@ -24,6 +24,7 @@
   background: transparent;
   color: transparent;
   top: 40%;
+  -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
   padding: 0;
   border: none;
