--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2418,6 +2418,8 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 32px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .page_sout_container .sout_block .sout_item {
   border-radius: 10px;
