--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -426,10 +426,10 @@ body {
     .information_important_info{
 
         .slick-list{
-            margin: 0 -32x;
+            margin: 0 -32x!important;
         }
         .banner{
-            margin: 0 32px;
+            margin: 0 32px!important;
             img{
                 width: 100%;
                 border-radius: 10px;
