--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2343,7 +2343,7 @@ body {
 }
 
 .header-card {
-    width: 1067px;
+    max-width: 1067px;
     margin-top: 30px;
     display: flex;
     border: 1px solid #BBDFE3;
