--- a/static/css/_all.scss
+++ b/static/css/_all.scss
@@ -6,6 +6,7 @@ $header_bg: #45A6AF;
 $blue_h2: #013236;
 $white: #ffffff;
 $red: #E80B8B;
+$pink: #FF8ED0;
 $footer_bg: #03646D;
 $footer_text : #BBDFE3;
 $header_social: #055D65;
