adaptive slider important home page

--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -211,4 +211,18 @@
     }
 }
 
+//-------- slider important home page 
+@media(max-width: 1024px){
+.slider_background {
+    height: 38vw;
+}
 
+}
+
+@media(max-width: 767px){
+    .slider_background {
+        height: 70vw;
+    }
+    
+    }
+    // ------------------------
