--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1191,14 +1191,15 @@ body {
             line-height: 25px;
             // display: flex;
             // align-items: center;
-            padding-top: 48px;
+            // padding-top: 48px;
             color: $black;
             display: block;
+            align-items: center;
             li {
                 line-height: 2;
             }
             p {
-                margin-top: 81px;
+                // margin-top: 81px;
                 line-height: 25px;
                 // display: flex;
                 // align-items: center;
