--- a/static/css/style.css
+++ b/static/css/style.css
@@ -323,10 +323,11 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 60px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 .header_bottom .header_container .header_bottom_menu .menu_list .menu-item {
   margin-top: 18px;
