--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -140,8 +140,9 @@ body {
                 margin-top: 0px;
                 margin-bottom: 0px;
                 display: flex;
-                gap: 60px;
+                // gap: 60px;
                 justify-content: space-between;
+                flex-wrap: nowrap;
                 .menu-item {
                     margin-top: 18px;
                     margin-bottom: 18px;
