--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2333,7 +2333,7 @@ body {
 
 .search-input {
     width: 90%;
-    height: 100%;
+    height: 50%;
     border: none;
     outline: none;
     // padding-right: 20px;
@@ -2420,7 +2420,7 @@ body {
 
 .display-flex {
     display: flex;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     margin-bottom: 28px;
 }
 
@@ -2485,6 +2485,14 @@ body {
         margin-top: 28px;
         margin-bottom: 28px;
         justify-content: flex-start;
+    }
+}
+
+/////Общая информация о стационаре
+.twise-card {
+    img {
+        width: 585px;
+        height: 389px;
     }
 }
 
