--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2424,6 +2424,12 @@ body {
     margin-bottom: 28px;
 }
 
+.display-flex-hospital {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 28px;
+}
+
 .info {
     font-family: "Open Sans";
     margin-top: 30px;
