--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2677,6 +2677,15 @@ body {
   margin-bottom: 28px;
 }
 
+.display-flex-hospital {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 28px;
+}
+
 .info {
   font-family: "Open Sans";
   margin-top: 30px;
